# django-tablature

./: .gitignore  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.py
tablature/: __init__.py  views.py
tablature/jinja2/tablature/: table_page.html
tablature/jinja2/tablature/includes/: table.html
tablature/static/js/: tablature.js
tablature/static/less/: tablature.less
tablature/templates/: table.html
tablature/templates/tablature/: table_page.html
tablature/templates/tablature/includes/: table.html  table_init.js
